name:                Underlisp
version:             0.1.0.0
synopsis:            a little lisp interpreter written in Haskell
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Kotik Andreev
maintainer:          gkotolegokot@gmail.com
copyright:           Copyright: (c) 2016-2017 Kotik Andreev gkotolegokot@gmail.com
category:            Language
stability:           alpha
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
source-repository head
  type:     git
  location: https://github.com/Kotolegokot/Underlisp

executable underlisp
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.10, containers >= 0.5.8.1, dsp >= 0.2.3.1, unix >= 2.7.2.0, cond >= 0.1, mtl >= 2.2, readline >= 1.0, vector >= 0.11, safe >= 0.1, spoon >= 0.3, binding-core >= 0.2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions: FlexibleContexts
                      LambdaCase
                      ScopedTypeVariables
  ghc-options: -O2
               -fwarn-tabs
               -fwarn-unused-imports
               -fwarn-incomplete-patterns
               -fwarn-incomplete-uni-patterns
--               -fwarn-missing-signatures
